# mongodb_vs_elastic

./: README.md  docker-compose.yml
application/: Dockerfile  app.py  pyproject.toml  test.py
populator/: Dockerfile  populate.py  pyproject.toml
