[tool.poetry]
name = "ingest"
version = "0.1.0"
description = ""
authors = ["anon <vikram.saraph.22@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
