[tool.poetry]
name = "populator"
version = "0.1.0"
description = ""
authors = ["anon <vikram.saraph.22@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.1.1"
gevent = "^21.12.0"
elasticsearch = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
